--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,14 @@ charset-normalizer==3.3.2
 click==8.1.7
 dnspython==2.5.0
 Flask==3.0.1
+Flask-Cors==4.0.0
 Flask-PyMongo==2.3.0
 idna==3.6
 importlib-metadata==7.0.1
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.4
+mongo==0.2.0
 passlib==1.7.4
 pymongo==4.6.1
 requests==2.31.0
